--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="twitter:card" content=""/>
+      <meta name="twitter:site" content="@oluwaseyi__7"/>
+      <meta name="twitter:creator" content="@oluwaseyi__7"/>
+      <meta name="twitter:title" content="ParaScore"/>
+      <meta name="twitter:description" content="ParaScore is a football app that provides live scores, fixtures, news, transfers, and more."/>
+      <meta name="twitter:image" content="https://res.cloudinary.com/drxjxycnn/image/upload/c_fill,w_300,h_157/v1741418731/logo_aabzju.jpg"/>
+      <meta name="twitter:image:alt" content="ParaScore"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
