added twitter meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="twitter:creator" content="@oluwaseyi__7"/>
       <meta name="twitter:title" content="ParaScore"/>
       <meta name="twitter:description" content="ParaScore is a football app that provides live scores, fixtures, news, transfers, and more."/>
-      <meta name="twitter:image" content="https://res.cloudinary.com/drxjxycnn/image/upload/v1741420532/logo_lpbi4r.webp"/>
+      <meta name="twitter:image:src" content="https://res.cloudinary.com/drxjxycnn/image/upload/v1741420532/logo_lpbi4r.webp"/>
       <meta name="twitter:image:alt" content="ParaScore"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
