--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="twitter:description" content="ParaScore is a football app that provides live scores, fixtures, news, transfers, and more."/>
       <meta name="twitter:image:src" content="https://res.cloudinary.com/drxjxycnn/image/upload/v1741420532/logo_lpbi4r.webp"/>
       <meta name="twitter:image:alt" content="ParaScore"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
